# Basketo

./: .gitmodules  CMakeLists.txt  ContributionGuidline.md  LICENSE  README.md  config.json.example
.github/: FUNDING.yml
assets/Scenes/: scene.json
assets/Scripts/: cat.lua  event_statemachine_demo.lua  particle_demo.lua  player.lua  player_with_sounds.lua  ui_demo.lua
assets/animations/: mariorunning.json  running.json
assets/scripts/: player.lua
docs/: GeminiAPIKeySetup.md  SoundEffectsSystem.md
src/: AssetManager.cpp  AssetManager.h  AssetValidator.cpp  AssetValidator.h  Entity.cpp  Entity.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  MemoryTracker.cpp  MemoryTracker.h  Physics.cpp  Physics.h  Scene.h  SceneManager.cpp  SceneManager.h  main.cpp
src/ai/: AIPromptProcessor.cpp  AIPromptProcessor.h
src/animation/: Animation.h
src/ecs/: Component.h  ComponentManager.h  Entity.h  EntityManager.h  System.h  SystemManager.h  Types.h
src/ecs/components/: AnimationComponent.h  AudioComponent.h  CameraComponent.h  ColliderComponent.h  EventComponent.h  NameComponent.h  ParticleComponent.cpp  ParticleComponent.h  RigidbodyComponent.h  ScriptComponent.h  SpriteComponent.h  StateMachineComponent.h  TagComponent.h  TransformComponent.h  UIComponent.h  VelocityComponent.h
src/ecs/systems/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.h  EventSystem.cpp  EventSystem.h  MovementSystem.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  StateMachineSystem.cpp  StateMachineSystem.h  UISystem.cpp  UISystem.h
src/scenes/: DevModeInputHandler.cpp  DevModeInputHandler.h  DevModeScene.cpp  DevModeScene.h  DevModeSceneSerializer.cpp  DevModeSceneSerializer.h  GameScene.cpp  GameScene.h  InspectorPanel.cpp  InspectorPanel.h  MenuScene.cpp  MenuScene.h
src/spatial/: Quadtree.cpp  Quadtree.h
src/utils/: Console.cpp  Console.h  EditorHelpers.h  EditorUtils.cpp  EditorUtils.h  FileUtils.cpp  FileUtils.h
tests/: CMakeLists.txt  test_game.cpp  test_input.cpp  test_physics.cpp
utils/: utility.cpp  utility.h
